feat: [CDS-78136]: Make barriers steps work within looping strategies (#52659)
* Propagate stageId, stepGroupId, strategyId and isInsideRollbackSteps to child nodes

* Address comments

* Remove unused imports

* Codeformat after rebase

* Fix PlanCreatorUtilsV1

* Fix UTs

* Initially address comments

* Final address comments

* Style fix

* Add tooling for supporting barriers within looping strategies

* Use FF to minimize changes to current flow

* Add UTs

* Fix style

* Address comments

* Address comments #2

* Style fix

* Address comments

* Changes for barrier flow

* Address comments

* Address comments #2

* Add Uts

* Fix rebase issue

* Address comments

* Add comments in BarrierWithinStrategyExpander

* Fix style

* Fix style

* Fix style and imports

* Codeformat

* Address comments

* Codeformat